--- a/css/estilo.css
+++ b/css/estilo.css
@@ -219,6 +219,13 @@ max-width: 100%;
 	margin-top: 7px;
 }
 
+.imgcuy{
+	margin-left: 7px;
+	margin-top: 7px;
+	width: 670px;
+	height: 300px;
+	float: right;
+}
 
 #der{
 	width: 290px;
