--- a/css/estilo.css
+++ b/css/estilo.css
@@ -225,7 +225,7 @@ max-width: 100%;
 
 #der{
 	width: 290px;
-	height: 300px;
+	height: 326px;
 	border: 1px solid #000;
 	float: right;
 }
@@ -246,4 +246,16 @@ body{
 
 .referencia{
 	text-align: center;
+}
+
+#map{
+	outline: 2px solid blue;
+	margin: 5px auto;
+	width: 300px;
+	height: 300px;
+} 
+
+#map iframe {
+	width: 100%;
+	height: 100%
 }
